# maiko

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  spellcheck.dic  taplo.toml
.github/workflows/: ci.yml
docs/: advanced.md  concepts.md  design-decisions.md  faq.md  getting-started.md  monitoring.md  testing.md  why-maiko.md
maiko/: CHANGELOG.md  Cargo.toml  README.md
maiko-macros/: CHANGELOG.md  Cargo.toml
maiko-macros/src/: lib.rs
maiko/benches/: COMPARISON.md  actor_to_actor_transport_actix.rs  actor_to_actor_transport_maiko.rs  actor_to_actor_transport_ractor.rs  broker_subscriber_lookup.rs
maiko/examples/: arbitrage.rs  backpressure.rs  guesser.rs  hello-world.rs  monitoring.rs  pingpong.rs
maiko/src/: actor.rs  actor_builder.rs  actor_config.rs  actor_id.rs  config.rs  context.rs  envelope.rs  envelope_builder.rs  error.rs  event.rs  event_id.rs  internal.rs  into_envelope.rs  label.rs  lib.rs  meta.rs  overflow_policy.rs  step_action.rs  subscribe.rs  supervisor.rs  supervisor_config.rs  topic.rs
maiko/src/internal/: actor_controller.rs  broker.rs  command.rs  command_sender.rs  gated_send.rs  subscriber.rs  subscription.rs
maiko/src/monitoring/: command.rs  dispatcher.rs  mod.rs  monitor.rs  monitor_handle.rs  monitoring_event.rs  registry.rs  sink.rs
maiko/src/monitors/: actor_monitor.rs  mod.rs  recorder.rs  tracer.rs
maiko/src/testing/: actor_spy.rs  actor_trace.rs  event_chain.rs  event_collector.rs  event_entry.rs  event_matcher.rs  event_query.rs  event_spy.rs  event_trace.rs  expectation.rs  harness.rs  mod.rs  topic_spy.rs
scripts/: bench_a2a_compare.py  bench_a2a_matrix.py  pyproject.toml
