[package]
name = "maiko-macros"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Procedural macros for the Maiko actor runtime"
authors = ["David de Rosier <ddrcode@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maiko-rs/maiko"
keywords = ["maiko", "actor", "macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
homepage = "https://github.com/maiko-rs/maiko"
documentation = "https://docs.rs/maiko-macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
