[package]
authors       = ["David de Rosier <ddrcode@gmail.com>"]
categories    = ["development-tools::procedural-macro-helpers"]
description   = "Procedural macros for the Maiko actor runtime"
documentation = "https://docs.rs/maiko-macros"
edition       = "2024"
homepage      = "https://github.com/maiko-rs/maiko"
keywords      = ["actor", "derive", "macro", "maiko"]
license       = "MIT OR Apache-2.0"
name          = "maiko-macros"
readme        = "README.md"
repository    = "https://github.com/maiko-rs/maiko"
rust-version  = "1.85"
version       = "0.3.1"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn   = "2.0"
