[package]
name = "maiko"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Lightweight event-driven actor runtime with topic-based pub/sub for Tokio"
authors = ["David de Rosier <ddrcode@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["actor", "pubsub", "tokio", "event-driven", "message-passing"]
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/maiko-rs/maiko"
homepage = "https://github.com/maiko-rs/maiko"
documentation = "https://docs.rs/maiko"
readme = "README.md"
exclude = [".gitignore", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["macros"]
macros = ["dep:maiko-macros"]
serde = ["dep:serde", "dep:serde_json"]
recorder = ["monitoring", "serde"]
monitoring = []
test-harness = ["monitoring"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
maiko-macros = { version = "=0.3.0", optional = true, path = "../maiko-macros/" }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tokio = {version="1.49", features=["macros", "rt", "rt-multi-thread", "time"]}
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1.20", features = ["v4"] }

[dev-dependencies]
getrandom = "0.4"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[example]]
name = "hello-world"
required-features = ["default"]

[[example]]
name = "pingpong"
required-features = ["default"]

[[example]]
name = "guesser"
required-features = ["default"]

[[example]]
name = "monitoring"
required-features = ["monitoring"]

[[example]]
name = "arbitrage"
required-features = ["default", "test-harness"]

[[example]]
name = "backpressure"
