[package]
authors       = ["David de Rosier <ddrcode@gmail.com>"]
categories    = ["asynchronous", "concurrency"]
description   = "Lightweight event-driven actor runtime with topic-based pub/sub for Tokio"
documentation = "https://docs.rs/maiko"
edition       = "2024"
exclude       = [".github/", ".gitignore"]
homepage      = "https://github.com/maiko-rs/maiko"
keywords      = ["actor", "event-driven", "message-passing", "pubsub", "tokio"]
license       = "MIT OR Apache-2.0"
name          = "maiko"
readme        = "README.md"
repository    = "https://github.com/maiko-rs/maiko"
rust-version  = "1.85"
version       = "0.3.1"

  [package.metadata.docs.rs]
  all-features = true
  rustdoc-args = ["--cfg", "docsrs"]

[features]
default      = ["macros"]
macros       = ["dep:maiko-macros"]
monitoring   = []
recorder     = ["monitoring", "serde"]
serde        = ["dep:serde", "dep:serde_json"]
test-harness = ["monitoring"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
maiko-macros = { version = "=0.3.1", optional = true, path = "../maiko-macros/" }
serde        = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json   = { version = "1.0", optional = true }
thiserror    = "2.0"
tokio        = { version = "1.49", features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
tracing      = "0.1"
uuid         = { version = "1.20", features = ["v4"] }

[dev-dependencies]
criterion          = "0.8.2"
getrandom          = "0.4"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[example]]
name              = "hello-world"
required-features = ["default"]

[[example]]
name              = "pingpong"
required-features = ["default"]

[[example]]
name              = "guesser"
required-features = ["default"]

[[example]]
name              = "monitoring"
required-features = ["monitoring"]

[[example]]
name              = "arbitrage"
required-features = ["default", "test-harness"]

[[example]]
name = "backpressure"

[[bench]]
harness = false
name    = "broker_subscriber_lookup"
path    = "benches/broker_subscriber_lookup.rs"

[[bench]]
name = "actor_to_actor_transport_maiko"
harness = false
path = "benches/actor_to_actor_transport_maiko.rs"

